crates/testing/tests/testscript/errors/string_escape_unicode_empty.error
parse error at line 2 column 5 for "\"'\\\\u{}'\"":
'\u{}'
    ^